# ADO-Tool_Deck

./: README.md  build.py  index.html  pyproject.toml
RevealDeck01/images/logos/: README.txt
examples/: ado-tool.yaml
images/diagrams/: README.txt
images/screenshots/: README.txt
static/css/base/: reset.css  reveal-overrides.css
static/css/components/: components.css
static/css/themes/: default.css  guidepoint.css
templates/: base.html
templates/slides/: content.html  title.html
